--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.3"
