--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,13 @@
   ],
   "routes": [
     {
+      "src": "/assets/(.*)",
+      "dest": "/dist/assets/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
       "src": "/api/login",
       "dest": "/api/login.js"
     },
