--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,29 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/*.js",
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }  
+    },
+    {
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/index.js"
+      "src": "/assets/(.*)",
+      "dest": "/dist/assets/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
+    { "src": "/api/(.*)", "dest": "/index.js" },
     {
       "src": "/(.*)",
-      "dest": "/dist/index.html"
+      "dest": "/index.html"  
     }
   ]
 }
+
+  
