--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
-    { "src": "/api/(.*)", "dest": "/index.js" },
+    { "src": "/api/(.*)", "dest": "/api/index.js" },
     {
       "src": "/(.*)",
       "dest": "/index.html"  
