--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }  
+      "config": { "distDir": "dist" }
     },
     {
       "src": "api/**/*.js",
@@ -19,12 +19,27 @@
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
-    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { 
+      "src": "/api/esp8266_1_update",
+      "dest": "/api/index.js",
+      "methods": ["POST"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "POST"
+      }
+    },
+    { 
+      "src": "/api/(.*)", 
+      "dest": "/api/index.js" 
+    },
     {
       "src": "/(.*)",
-      "dest": "/index.html"  
+      "dest": "/index.html"
     }
-  ]
+  ],
+  "protectionBypass": {
+    "/api/esp8266_1_update": {
+      "required": false
+    }
+  }
 }
-
-  
