chỉnh lại vercel bth

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": { "distDir": "dist" }  
     },
     {
       "src": "api/**/*.js",
@@ -19,18 +19,12 @@
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
-    { 
-      "src": "/api/(.*)", 
-      "dest": "/api/index.js" 
-    },
+    { "src": "/api/(.*)", "dest": "/api/index.js" },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/index.html"  
     }
-  ],
-  "protectionBypass": {
-    "/api/(.*)": {
-      "required": false
-    }
-  }
+  ]
 }
+
+  
