--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mqtt": "^5.13.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
