--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "moment": "^2.30.1",
     "mqtt": "^5.13.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
